--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 jobs:
-  build:
-     docker:
+    docker:
       - image: xyzuan/xdocker:latest
     steps:
       - run:
-          name: LLVM-tc Compilation
-          command: 
-            bash llvm-tc_build.sh  
+          name: llvm-tc-compiler
+          command: |
+          wget https://raw.githubusercontent.com/TianWalkzzMiku/CircleCI-Clang/ci_llvm-tc/llvm-tc_build.sh
+          bash llvm-tc_build.sh
