--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,21 @@
-version: rev1.5_template
+version: 2.1
 jobs:
-dependencies:
- sudo apt install openssh-server screen python git openjdk-8-jdk android-tools-adb bc bison \
- build-essential curl flex g++-multilib gcc-multilib gnupg gperf imagemagick lib32ncurses-dev \
- lib32readline-dev lib32z1-dev  liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev \
- libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc yasm zip zlib1g-dev \
- libtinfo5 libncurses5
-  build:
     docker:
       - image: xyzuan/xdocker:latest
     steps:
       - run:
           name: llvm-tc-compiler
           command: |
+           sudo apt install openssh-server screen python git openjdk-8-jdk android-tools-adb bc bison \
+           build-essential curl flex g++-multilib gcc-multilib gnupg gperf imagemagick lib32ncurses-dev \
+           lib32readline-dev lib32z1-dev  liblz4-tool libncurses5-dev libsdl1.2-dev libssl-dev \
+           libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc yasm zip zlib1g-dev \
+           libtinfo5 libncurses5
            wget https://raw.githubusercontent.com/TianWalkzzMiku/CircleCI-Clang/ci_llvm-tc/llvm-tc_build.sh
            bash llvm-tc_build.sh
+           
+workflows:
+version: 2.1
+cooking:
+    jobs:
+      - compile
