--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   compile:
   docker:
-     - image: xyzuan/xdocker:latest
+     - image: z4nyx/docker:latest
     steps:
       - run:
           command: |
