--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: z4nyx/docker:latest
+      - image: zycromerz/kerneldocker:v3
     steps:
       - run:
           name: llvm-tc-compiler
